<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/about_logo" />
    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="登 录"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_phone" />
            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/tip_please_input_phone_number"
                android:inputType="number"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_phone_number_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_phone_number"
                app:met_regexp="@string/regex_phone_number" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_password" />
            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_please_input_password"
                android:inputType="number"
                app:met_clearButton="false"
                app:met_errorMessage="@string/tip_password_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/lab_login_by_password"
                app:met_maxCharacters="4"
                app:met_regexp="@string/regex_password" />
        </FrameLayout>

    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
        android:id="@+id/btn_login"
        style="@style/SuperButton.Primary.Login"
        android:layout_marginTop="16dp"
        android:text="@string/title_login_register" />
    </LinearLayout>
</LinearLayout>